--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <link type="text/css" rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
         <link type="text/css" rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css" />
         
+        <link type="stylesheet/less" rel="stylesheet/less" href="styles/main.less" />
+        
+        <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.5.1/less.min.js"></script>
         <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
         <script type="text/javascript" src="bower_components/angular-resource/angular-resource.min.js"></script>
         <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
