Added account page

--- a/app/account/account.html
+++ b/app/account/account.html
@@ -1,4 +1,4 @@
 <div class="container-fluid">
-    Account
-    {{account.holla}}
+    <h1>Welcome, {{account.name}}</h1>
+    <h5>{{(account.hasClass)?"We've been expecting you":"It doesn't look like you have any classes right now :/"}}</53>
 </div>
