--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </head>
     
     <body ng-controller="NavController as nav">
-        <div class="container-fluid nav">
+        <div class="container-fluid">
             <div class="pull-left">
                 <!-- <div class="brand">
                     Anonimo
