--- a/app/account/account.html
+++ b/app/account/account.html
@@ -1,5 +1,7 @@
 <div class="container-fluid">
-    <h1>Welcome, {{account.name}}</h1>
-    <h5>{{(account.hasClass)?"We've been expecting you":"It doesn't look like you have any classes right now :/"}}</53>
+	<div class="col-lg-12 col-lg-offset-1">
+	    <h1>Welcome, {{account.name}}</h1>
+	    <h5>{{(account.hasClass)?"We've been expecting you.":"It doesn't look like you have any classes right now :/"}}</53>
+	</div>
 </div>
 
