--- a/app/landingpage/landingpage.html
+++ b/app/landingpage/landingpage.html
@@ -2,7 +2,7 @@
 
     <div class="jumbotron">
         <h1>A platform for anonymous in-class questions</h1>
-        <p>Accelerate your class's learning with Anonimo</p>
+        <p style="text-align: center">Accelerate your class's learning with Anonimo</p>
     </div>
     
     
