--- a/app/landingpage/landingpage.html
+++ b/app/landingpage/landingpage.html
@@ -1,22 +1,26 @@
-<div class="container-fluid centeringlol">
+<div ng-controller="LandingPageController">
+    <div class="container-fluid centeringlol">
 
     <h1 class="text-center signuph1">Sign Up</h1>
 
-    <div class="btn btn-default btnsignup" ng-hide="landingpage.signupstatus" ng-click="landingpage.signup('prof')">
-        I am a Professor
-    </div>
-
-    <div class="btn btn-default btnsignup" ng-hide="landingpage.signupstatus" ng-click="landingpage.signup('student')">
-        I am a Student
+    <div ng-show="showButtons">
+        <div class="btn btn-default btnsignup" ng-click="setSignUpMode(true)">
+            I am a Professor
+        </div>
+        <div class="btn btn-default btnsignup" ng-click="setSignUpMode(false)">
+            I am a Student
+        </div>
     </div>
     
-<!--
-                    <form ng-show="landingpage.signupstatus" class="navbar-form navbar-left" ng-submit="nav.login()" >
-                <div class="form-group">
-                <input type="email" class="form-control" placeholder="Email" ng-model="nav.user">
-                <input type="password" class="form-control" placeholder="Password" ng-model="nav.pass">
-                </div>
-                <button type="submit" class="btn btn-default">Log in</button>
-                </form>    
--->
+    <div ng-show="!showButtons">
+        <form class="navbar-form navbar-left" ng-submit="signUp()" >
+            <div class="form-group">
+                <input type="text" class="form-control" placeholder="Name" ng-model="name">
+                <input type="email" class="form-control" placeholder="Email" ng-model="email">
+                <input type="password" class="form-control" placeholder="Password" ng-model="password">
+            </div>
+            <button type="submit" class="btn btn-default">Sign up</button>
+        </form>    
+    </div>
+</div>
 </div>
