--- a/app/landingpage/landingpage.html
+++ b/app/landingpage/landingpage.html
@@ -1,5 +1,5 @@
 <div ng-controller="LandingPageController">
-    <div class="container-fluid centeringlol">
+    <div class="container-fluid centeringlol text-center">
 
     <h1 class="text-center signuph1">Tagline goes here</h1>
 
@@ -34,8 +34,9 @@
                 <input type="text" class="form-control" placeholder="Name" ng-model="name">
                 <input type="email" class="form-control" placeholder="Email" ng-model="email">
                 <input type="password" class="form-control" placeholder="Password" ng-model="password">
+                <br>
+                <button type="submit" class="btn btn-default" style="margin-top: 10px">Sign up</button>
             </div>
-            <button type="submit" class="btn btn-default">Sign up</button>
         </form>    
     </div>
 </div>
