--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <script type="text/javascript" src="app/app.js"></script>       
         <script type="text/javascript" src="app/nav/navcontroller.js"></script>
         <script type="text/javascript" src="app/landingpage/landingpagecontroller.js"></script>
+        <script type="text/javascript" src="app/lectureroom/lectureroomcontroller.js"></script>
         <script type="text/javascript" src="app/account/accountcontroller.js"></script>
 
         <title>Anonimo</title>
