--- a/app/account/account.html
+++ b/app/account/account.html
@@ -1,8 +1,8 @@
 <div ng-controller="AccountController">
-    <div class="container" style="color:#fff">
+    <div class="container">
     <p>Hey Prof, to go to a lecture room, you may either add a new lecture or select an existing lecture</p>
     <div class="row">
-        <div class="col-xs-6">
+        <div class="col-xs-6" class="jumbotron">
             <h3>Add a Lecture</h3>
 <!--             <form>
                 <label>Name: <input type="text" ng-model="newLectureName" placeholder="CS101"></label>
@@ -11,8 +11,22 @@
                     <label><input type="checkbox" ng-value="l" name="Name" ng-model="selectedLecture"> {{l['Name']}}</label>
                 </div>
             </form> -->
+    <div class="profForm" style="float: left;">
+        <form role="form"> <!-- action="" method="GET"-->
+            Name of lecture<br>
+            <input type="text" placeholder="CS101">
+            <br>
+            <br>
+            Enroll students<br>
+            <div ng-repeat="s in allStudentsEverCreated">
+                <input type="checkbox" name="student"> {{s['Name']}}<br>
+            </div>
+            <br><br>
+            <button class="btn btn-success" style="margin-top: 10px">Submit</button>
+        </form>
+    </div>
         </div>
-        <div class="col-xs-6">
+        <div class="col-xs-6" class="jumbotron">
             <h3>Select a Lecture</h3>
             <div ng-repeat="l in lectures">
                 <label><input type="radio" ng-value="l" name="Name" ng-model="selectedLecture"> {{l['Name']}}</label>
