--- a/app/landingpage/landingpage.html
+++ b/app/landingpage/landingpage.html
@@ -9,49 +9,53 @@
           <li class=""><a href="#signup" data-toggle="tab">Register</a></li>
         </ul>
     </div>
-  <div class="modal-body">
-    <div id="myTabContent" class="tab-content">
-    <div class="tab-pane fade active in" id="signin">
-        <form class="form-horizontal">
-        <fieldset>
-        <!-- Sign In Form -->
-        <!-- Text input-->
-        <div class="control-group">
-          <label class="control-label" for="userid">Alias:</label>
-          <div class="controls">
-            <input required="" id="userid" name="userid" type="text" class="form-control" placeholder="JoeSixpack" class="input-medium" required="">
-          </div>
-        </div>
 
-        <!-- Password input-->
-        <div class="control-group">
-          <label class="control-label" for="passwordinput">Password:</label>
-          <div class="controls">
-            <input required="" id="passwordinput" name="passwordinput" class="form-control" type="password" placeholder="********" class="input-medium">
-          </div>
-        </div>
+    <div class="modal-body">
+        <div id="myTabContent" class="tab-content">
+        <div class="tab-pane fade active in" id="signin">
+            <form class="form-horizontal" ng-submit='signIn()'>
+                <fieldset>
+                    <div class="control-group">
+                        <label class="control-label" for="email">Email:</label>
+                        <div class="controls">
+                            <input type="text" id="email" name="email" class="form-control" 
+                                   placeholder="stanley@gmail.com" ng-model='email'>
+                        </div>
+                    </div>
 
-<!--         Multiple Checkboxes (inline)
-        <div class="control-group">
-          <label class="control-label" for="rememberme"></label>
-          <div class="controls">
-            <label class="checkbox inline" for="rememberme-0">
-              <input type="checkbox" name="rememberme" id="rememberme-0" value="Remember me">
-              Remember me
-            </label>
-          </div>
-        </div> -->
+                    <div class="control-group">
+                        <label class="control-label" for="password">Password:</label>
+                        <div class="controls">
+                            <input type="password" id="password" name="password" 
+                                   class="form-control" placeholder="********" ng-model='password'>
+                      </div>
+                    </div>
 
-        <!-- Button -->
-        <div class="control-group">
-          <label class="control-label" for="signin"></label>
-          <div class="controls">
-            <button id="signin" name="signin" class="btn btn-success">Sign In</button>
-          </div>
+                    <!-- Radio button for I am a professor / student -->
+
+                    <div class='control-group'>
+                        <label class="control-label" for="userType">I am a:</label>
+                        <div class="controls">
+                            <input type="radio" id="userType" name="userType"
+                                    ng-model='userType' value='student'> Student
+
+                            <input type="radio" id="userType" name="userType"
+                                    ng-model='userType' value='professor'> Professor
+
+                      </div>
+                    </div>
+
+                    <div class="control-group">
+                        <label class="control-label" for="signin"></label>
+                        <div class="controls">
+                            <button type='submit' id="signin" name="signin" class="btn btn-success">Sign In</button>
+                        </div>
+                    </div>
+                </fieldset>
+            </form>
         </div>
-        </fieldset>
-        </form>
     </div>
+
     <div class="tab-pane fade" id="signup">
         <form class="form-horizontal">
         <fieldset>
